8310062: [Shenandoah] Incomplete SATB buffers may not be processed during degenerated young collection

Reviewed-by: ysr, kdnilsen